--- a/mbdyn/manual/mybib.bib
+++ b/mbdyn/manual/mybib.bib
@@ -3002,3 +3002,38 @@
 	institution = {NREL}
 }
 
+@article{PENNESTRI-2007-JB,
+	journal = {Journal of Biomechanics},
+	volume = {40},
+	number = {6},
+	year = {2007},
+	pages = {1350--1361},
+	title = {Virtual musculo-skeletal model for the biomechanical analysis of the upper limb},
+	author = {E. Pennestr\`{\i} and R. Stefanelli and P. P. Valentini and L. Vita},
+	note = {doi:10.1016/j.jbiomech.2006.05.013},
+	pdf = {pennestri-jb-bio.pdf}
+}
+
+@inproceedings{ZANONI-2012-IMSD,
+	booktitle = {2nd Joint International Conference on Multibody System Dynamics},
+	month = {May 29--June 1},
+	year = {2012},
+	address = {Stuttgart, Germany},
+	editor = {P. Eberhard and P. Ziegler},
+	title = {Upper Limb Mechanical Impedance Variability Estimation by Inverse Dynamics and Torque-Less Activation Modes},
+	author = {Andrea Zanoni and Pierangelo Masarati and Giuseppe Quaranta},
+	pdf = {ZanoniMasaratiQuaranta_fullpaper.pdf}
+}
+
+@inproceedings{ZANONI-2012-IMECE,
+	author = {A. Zanoni and P. Masarati and G. Quaranta},
+	title = {Rotorcraft Pilot Impedance from Biomechanical Model Based on Inverse Dynamics},
+	booktitle = {International Mechanical Engineering
+		Congress \& Exposition ({IMECE}) 2012},
+	address = {Houston, Texas},
+	month = {November 9--15},
+	year = {2012},
+	note = {Paper No.~IMECE2012-87533},
+	pdf = {ASME-IMECE2012-87533.pdf}
+}
+
