--- a/mbdyn/modules/module-muscles/muscles.tex
+++ b/mbdyn/modules/module-muscles/muscles.tex
@@ -16,6 +16,9 @@ run-time loadable module for MBDyn (\url{http://www.mbdyn.org/}).
 \end{abstract}
 
 \section{Introduction}
+\cite{PENNESTRI-2007-JB},
+\cite{ZANONI-2012-IMSD},
+\cite{ZANONI-2012-IMECE}
 
 
 
@@ -132,5 +135,8 @@ while the equivalent stiffness and damping are computed as
 
 \section{Concluding Remarks}
 
+
+\bibliographystyle{unsrt}
+\bibliography{../../manual/mybib}
 
 \end{document}
