--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -13,6 +13,8 @@ MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added '-N' command-line switch to set threads number
+		- added module-nonsmooth-node: non-smooth dynamics support
+		  using SICONOS (Matteo Fancello)
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
