--- a/mbdyn/manual/input/modal-fem-format.tex
+++ b/mbdyn/manual/input/modal-fem-format.tex
@@ -115,6 +115,7 @@ The format is:
 [...]
 \bnt{C_NMODES_1} [...] \bnt{C_NMODES_NMODES}
 <comments; the modal damping matrix in column-major (symmetric?)>
+** \kw{END OF FILE}
 \end{Verbatim}
 %\end{verbatim}
 }
