--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -15,6 +15,8 @@ MBDyn 1.X-Devel
 		- added '-N' command-line switch to set threads number
 		- added module-nonsmooth-node: non-smooth dynamics support
 		  using SICONOS (Matteo Fancello)
+		- added 3D variant of continuous contact constitutive law
+		  (Matteo Fancello)
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
