--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -14,7 +14,8 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added '-N' command-line switch to set threads number
 		- added module-nonsmooth-node: non-smooth dynamics support
-		  using SICONOS (Matteo Fancello)
+		  using SICONOS <http://siconos.gforge.inria.fr/>
+		  (Matteo Fancello)
 		- added 3D variant of continuous contact constitutive law
 		  (Matteo Fancello)
 	Backward compatibility issues:
