(minimally) document line search

--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -70,6 +70,7 @@ Simple example of run-time loadable user-defined element,
 implements a scalar mass-damper-spring system.
 
 \subsection{Module-nonsmooth-node}
+\emph{Author: Matteo Fancello}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{name} ::= \kw{nonsmooth node}
 
