--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,9 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-MBDyn 1.X-Devel
+MBDyn 1.5.4
 	Enhancements:
-		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added '-N' command-line switch to set threads number
 		- added module-nonsmooth-node: non-smooth dynamics support
 		  using SICONOS <http://siconos.gforge.inria.fr/>
