--- a/mbdyn/manual/input/problems.tex
+++ b/mbdyn/manual/input/problems.tex
@@ -440,37 +440,138 @@ This nonlinear solver is well tested.
             [ , \kw{keep jacobian matrix} ]
             [ , \kw{honor element requests} ] \} ]
         [ , \kw{tolerance x} , \bnt{tolerance_x} ]
-        [ , \kw{tolerance f} , \bnt{tolerance_f} ]
         [ , \kw{tolerance min} , \bnt{tolerance_min} ]
         [ , \kw{max iterations} , \bnt{max_iterations} ]
         [ , \kw{alpha} , \bnt{alpha} ]
         [ , \kw{lambda min} , \bnt{lambda_min}
-            [ , \kw{relative} , \{ \kw{yes} | \kw{no} | (bool) \bnt{relative} \} ] ]
+            [ , \kw{relative} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{relative} \} ] ]
         [ , \kw{lambda factor min} , \bnt{lambda_factor_min} ]
         [ , \kw{max step} , \bnt{max_step} ]
-        [ , \kw{zero gradient} , \kw{continue} , \{ \kw{yes} | \kw{no} | (bool) \bnt{zero_gradient} \} ]
-        [ , \kw{divergence check} , \{ \kw{yes} | \kw{no} | (bool) \bnt{divergence_check} \}
+        [ , \kw{zero gradient} , \kw{continue} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{zero_gradient_continue} \} ]
+        [ , \kw{divergence check} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{divergence_check} \}
             [ , \kw{factor} , \bnt{factor} ] ]
         [ , \kw{algorithm} , \{ \kw{cubic} | \kw{factor} \} ]
-        [ , \kw{scale newton step} , \{ \kw{yes} | \kw{no} | (bool) \bnt{zero_gradient} \}
+        [ , \kw{scale newton step} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{scale\_newton\_step} \}
             [ , \kw{min scale} , \bnt{min_scale} ] ]
-        [ , \kw{print convergence info} , \{ \kw{yes} | \kw{no} | (bool) \bnt{print_convergence_info} \} ]
-        [ , \kw{verbose} , \{ \kw{yes} | \kw{no} | (bool) \bnt{verbose} \} ]
-        [ , \kw{abort at lambda min} , \{ \kw{yes} | \kw{no} | (bool) \bnt{abort_at_lambda_min} \} ] ;
+        [ , \kw{print convergence info} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{print_convergence_info} \} ]
+        [ , \kw{verbose} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{verbose} \} ]
+        [ , \kw{abort at lambda min} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{abort_at_lambda_min} \} ] ;
 \end{Verbatim}
 \begin{itemize}
-\item $\nt{tolerance\_x} \ge 0$
-\item $\nt{tolerance\_f} \ge 0$
-\item $\nt{tolerance\_min} \ge 0$
-\item $\nt{max\_iterations} \ge 0$
-\item $\nt{alpha} \ge 0$
-\item $\nt{lambda\_min} \ge 0$
-\item $0 < \nt{lambda\_factor\_min} < 1$
-\item $\nt{max\_step} \ge 0$
-\item $\nt{factor} \ge 0$
-\item $0 \le \nt{min\_scale} \le 1$
+\item $\nt{tolerance\_x} \ge 0$; default: $\nt{tolerance\_x}=10^{-7}$
+\item $\nt{tolerance\_min} \ge 0$; default: $\nt{tolerance\_min} = 10^{-8}$
+\item $\nt{max\_iterations} \ge 0$; default: $\nt{max\_iterations} = 200$
+\item $\nt{alpha} \ge 0$; default: $\nt{alpha}=10^{-4}$
+\item $\nt{lambda\_min} \ge 0$; default: $\nt{lambda\_min}=10^{-2}$
+\item $0 < \nt{lambda\_factor\_min} < 1$; default: $\nt{lambda\_factor\_min}=10^{-1}$
+\item $\nt{max\_step} \ge 0$; default: $\nt{max\_step} = 100$
+\item $\nt{factor} \ge 0$; default: $\nt{factor} = 1$
+\item $0 \le \nt{min\_scale} \le 1$; default: $\nt{min\_scale}=10^{-3}$
 \end{itemize}
-\emph{TODO}
+
+\subparagraph{Brief description of the solver}
+The line search solver should be used mainly if the Newton Raphson solver diverges and further reduction of the time step is not possible or not available (for example in the initial assembly phase). In many situations this solver is able to handle larger time steps or load increments than the ordinary Newton Raphson solver. However the total number of iterations can increase for large time steps.
+
+\subparagraph{The ordinary Newton Raphson strategy}
+The Newton Raphson Solver solves a problem of the form $\boldsymbol{F}\left(\boldsymbol{x}\right)=\boldsymbol{0}$ by means of the iteration $\delta\boldsymbol{x}=\boldsymbol{J}^{-1}\,\boldsymbol{F}$.
+
+\begin{description}
+\item[$\delta\boldsymbol{x}$] The increment of the solution $\boldsymbol{x}$ during one iteration.
+\item[$\boldsymbol{J}$] The modified Jacobian matrix. 
+For example during the initial assembly phase $\boldsymbol{J}=-\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{x}}$. 
+On the other hand during the regular solution phase of an initial value problem $\boldsymbol{J}=-\frac{\partial \boldsymbol{F}}{\partial \dot{\boldsymbol{x}}}-c\,\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{x}}$
+and $\delta\dot{\boldsymbol{x}}=\boldsymbol{J}^{-1}\,\boldsymbol{F}$ whereas $\delta\boldsymbol{x}=c\,\delta\dot{\boldsymbol{x}}$. But that's totally transparent to the nonlinear solver.
+\end{description}
+
+If the prediction for $\boldsymbol{x}$ is close enough to the solution of the problem, the convergence rate will be quadratic as long as $\boldsymbol{J}$ is exact and $\boldsymbol{F}$ is continuously differentiable in the neighbourhood of $\boldsymbol{x}$. Otherwise the rate of convergence will be not as good or even worse, the solution could diverge. The standard way to overcome such problems is to reduce the time step or to use adaptive time step control. If there are still convergence problems, the line search solver can be used.
+
+\subparagraph{The basic idea of line search}
+The line search solver from \cite{NumericalRecipes} uses the following modified strategy:
+
+\begin{equation}
+\delta\boldsymbol{x}=\lambda\,\boldsymbol{J}^{-1}\,\boldsymbol{F}
+\end{equation}
+
+\begin{description}
+\item[$0 < \lambda \le 1$] a scalar parameter
+\end{description}
+
+In other words the direction of the increment $\delta\boldsymbol{x}$ is the same like with the Newton Raphson solver but the step size can be optionally reduced by the factor $\lambda$ in order to avoid divergence.
+
+\subparagraph{How to determine $\lambda$}
+The parameter $\lambda$ is chosen by the algorithm at each iteration in order to minimize the scalar function $\boldsymbol{f}=\frac{1}{2}\,\boldsymbol{F}^T\,\boldsymbol{F}$ during the line search along the Newton direction $\delta\boldsymbol{x}$. Since the Newton direction $\delta\boldsymbol{x}$ is a descent direction for $f$, it is guaranteed, that the residual will be decreased at each iteration as long as $\nabla f \neq \boldsymbol{0}$, $\boldsymbol{J}$ is exact and $\boldsymbol{F}\left(\boldsymbol{x}\right)$ is continuously differentiable in the neighbourhood of $\boldsymbol{x}$.
+
+\subparagraph{Local minimum}
+However it could happen that the the solver converges to a local minimum of $f$ where $\nabla f = \boldsymbol{0}$ but $\boldsymbol{F} \neq \boldsymbol{0}$.
+The default behaviour of the solver is to bail out in such a situation unless \kw{zero gradient} , \kw{continue}, \kw{yes} has been specified. This flag has been added in order to test the solver but should not be used in general. If the solver bails out because the gradient $\nabla f$ is close to zero, it is recommended to decrease either $\bnt{tolerance\_min}$ or to reduce the time step.
+
+\subparagraph{Cubic interpolation of $f\left(\lambda\right)$}
+Two different strategies in order to determine $\lambda$ have been implemented.
+The original one published in \cite{NumericalRecipes} which uses a cubic interpolation of $f\left(\lambda\right)$ will be used if \kw{algorithm}, \kw{cubic} was specified in the input file.
+In order to avoid too small increments $\delta\boldsymbol{x}$, a value for $\nt{lambda\_factor\_min}$ can be specified.
+
+\begin{equation}
+\lambda_{n+1} \geq \nt{lambda\_factor\_min} \, \lambda_{n}
+\end{equation}
+
+\subparagraph{Multiplication by a constant factor}
+Also a simple algorithm, which multiplies $\lambda$ by the constant factor $\nt{lambda\_factor\_min}$ at each line search iteration, can be used if \kw{algorithm}, \kw{factor} is specified in the input file.
+
+\subparagraph{The condition for backtracking}
+According to \cite{NumericalRecipes} the line search is completed if
+
+\begin{eqnarray}
+f &<& f_{prev} + \nt{alpha} \, s \\ \nonumber
+\end{eqnarray}
+
+\begin{description}
+\item[$s=\left(\nabla f\right)^T\,\boldsymbol{J}^{-1}\,\boldsymbol{F} = -\boldsymbol{F}^T\,\boldsymbol{F} < 0$] The initial slope of decrease of $f$ is the projection of the gradient $\nabla f$ to the Newton direction $\delta\boldsymbol{x}$.
+\item[$\nabla f=-\boldsymbol{J}^T\,\boldsymbol{F}$] The gradient of $f$
+\item[$f_{prev}$] The value of $f$ at the previous iteration
+\end{description}
+
+\subparagraph{If line search is not successful}
+If $\lambda$ becomes excessively small during line search, the solution might be too close to the prediction for $\boldsymbol{x}$.
+In that case the solver will bail out unless \kw{abort~at~lambda~min},~\kw{no} has been specified.
+
+\subparagraph{How to avoid excessively slow convergence}
+In order to avoid too small increments $\delta\boldsymbol{x}$, the minimum value for $\lambda$ can be specified by $\nt{lambda\_min}$ or $\nt{tolerance\_x}$ can be increased. In this case a reduction of the residual at each iteration is no longer guaranteed. For that reason \kw{abort~at~lambda~min},~\kw{no} should be specified and \kw{divergence~check},~$\bnt{factor}$ should be increased.
+
+By default also a relative test for $\lambda$ according to equation \ref{eqn:100} will be used unless \kw{lambda~min},~$\bnt{lambda\_min}$ \kw{relative},~\kw{no} has been specified.
+
+\begin{eqnarray}
+\label{eqn:100}
+\lambda &\geq& \max{\left[\nt{lambda\_min},\,\min{\left(\frac{\nt{tolerance\_x}}{t_{\lambda}},\,1\right)}\right]} \\ \nonumber
+t_{\lambda}&=&\max{\left[\frac{\left|\left(\boldsymbol{J}^{-1}\,\boldsymbol{F}\right)_{i}\right|}{\max{\left(\left|\boldsymbol{x}_i\right|,\, \left|\dot{\boldsymbol{x}}_i\right|,\, 1\right)}}\right]}_{i=1}^{n}
+\end{eqnarray}
+
+Equation \ref{eqn:100} was adapted from \cite{NumericalRecipes}.
+If one wishes only the relative test, $\nt{lambda\_min}=0$ should be specified.
+
+\subparagraph{How to avoid too large increments}
+In order to avoid too large increments $\delta\boldsymbol{x}$, a scale factor $\gamma$ has been introduced in \cite{NumericalRecipes}.
+\begin{eqnarray}
+\gamma &=& \max{\left[\nt{min\_step\_scale}, \, \min{\left(\frac{p}{\left|\left| \boldsymbol{J}^{-1} \, \boldsymbol{F} \right|\right|},\, 1\right)}\right]} \\ \nonumber
+p &=& \nt{max\_step\_size} \, \max{\left(\sqrt{\boldsymbol{x}^T\,\boldsymbol{x} + \dot{\boldsymbol{x}}^T\,\dot{\boldsymbol{x}}},\, n\right)} \\ \nonumber
+\delta\boldsymbol{x}&=&\gamma\,\lambda\,\boldsymbol{J}^{-1}\,\boldsymbol{F}
+\end{eqnarray}
+
+\begin{description}
+\item[$n$] The dimension of $\boldsymbol{x}$
+\item[$p$] The maximum step size
+\end{description}
+
+By specifying smaller values for $\nt{max\_step\_size}$ one can force the solver to search in the proximity of the prediction for $\boldsymbol{x}$. However the rate of convergence could be reduced in that way.
+
+\subparagraph{Solver diagnostic}
+Like for other nonlinear solvers, the convergence can be printed to the standard output by means of a \kw{output}:~\kw{iterations} statement in the initial value section. Moreover this solver prints also the line search history if \kw{print~convergence~info},~\kw{yes} was specified. This could be helpful in order to decide whether to increase or decrease $\nt{lambda\_min}$ or the maximum number of iterations. If one wants detailed information about the decisions of the solver, \kw{verbose}, \kw{yes} should be specified.
+
+\subparagraph{General notes}
+If one specifies \kw{abort~at~lambda~min},~\kw{no}, \kw{scale~newton~step},~\kw{no}, \kw{divergence~check},~\kw{no} and $\nt{lambda\_min}=1$, one gets the same behaviour like Newton Raphson. Moreover if $\nt{lambda\_min}<1$ and \kw{algorithm}, \kw{factor} was specified, the behaviour will be similar to a damped Newton method.
+
+\begin{thebibliography}{References}
+\bibitem{NumericalRecipes}\href{http://www.haoli.org/nr/bookcpdf/c9-7.pdf}{Numerical Recipes in C, The Art of Scientific Computing, William H. Press, Saul A. Teukolsky, William T. Vetterling, Brian P. Flannery}
+\end{thebibliography}
 
 \paragraph{Matrix free.}
 \emph{Author: Giuseppe Quaranta}
