--- a/mbdyn/manual/mybib.bib
+++ b/mbdyn/manual/mybib.bib
@@ -3010,8 +3010,7 @@
 	pages = {1350--1361},
 	title = {Virtual musculo-skeletal model for the biomechanical analysis of the upper limb},
 	author = {E. Pennestr\`{\i} and R. Stefanelli and P. P. Valentini and L. Vita},
-	note = {doi:10.1016/j.jbiomech.2006.05.013},
-	pdf = {pennestri-jb-bio.pdf}
+	note = {doi:10.1016/j.jbiomech.2006.05.013}
 }
 
 @inproceedings{ZANONI-2012-IMSD,
@@ -3021,8 +3020,7 @@
 	address = {Stuttgart, Germany},
 	editor = {P. Eberhard and P. Ziegler},
 	title = {Upper Limb Mechanical Impedance Variability Estimation by Inverse Dynamics and Torque-Less Activation Modes},
-	author = {Andrea Zanoni and Pierangelo Masarati and Giuseppe Quaranta},
-	pdf = {ZanoniMasaratiQuaranta_fullpaper.pdf}
+	author = {Andrea Zanoni and Pierangelo Masarati and Giuseppe Quaranta}
 }
 
 @inproceedings{ZANONI-2012-IMECE,
@@ -3033,7 +3031,14 @@
 	address = {Houston, Texas},
 	month = {November 9--15},
 	year = {2012},
-	note = {Paper No.~IMECE2012-87533},
-	pdf = {ASME-IMECE2012-87533.pdf}
+	note = {Paper No.~IMECE2012-87533}
+}
+
+@book{NUMERICAL-RECIPES-IN-C,
+	title = {Numerical Recipes in {C}},
+	author = {William H. Press and Saul A. Teukolsky and William T. Vetterling and Brian P. Flannery},
+	edition = {Second},
+	publisher = {Cambridge University Press},
+	year = {1992}
 }
 
