typo (noted by Rafael Rey Gayo)

--- a/mbdyn/manual/input/beam.tex
+++ b/mbdyn/manual/input/beam.tex
@@ -1407,7 +1407,7 @@ matrix is presented:
     set: integer beam_node3 = 2003;
     set: real EA = 1e6;   # N
     set: real GAy = .6e6; # N
-    set: real GAy = .6e6; # N
+    set: real GAz = .6e6; # N
     set: real GJ = 1.e3;  # Nm^2
     set: real EJy = 2.e3; # Nm^2
     set: real EJz = 1.e4; # Nm^2
@@ -1434,7 +1434,7 @@ is used in the constitutive matrix:
     set: integer beam_node3 = 2003;
     set: real EA = 1e6;    # N
     set: real GAy = .6e6;  # N
-    set: real GAy = .6e6;  # N
+    set: real GAz = .6e6;  # N
     set: real GJ = 1.e3;   # Nm^2
     set: real EJy = 2.e3;  # Nm^2
     set: real EJz = 1.e4;  # Nm^2
@@ -1612,7 +1612,7 @@ matrix is presented:
     set: real L = .4;     # m
     set: real EA = 1e6;   # N
     set: real GAy = .6e6; # N
-    set: real GAy = .6e6; # N
+    set: real GAz = .6e6; # N
     set: real GJ = 1.e3;  # Nm^2
     set: real EJy = 2.e3; # Nm^2
     set: real EJz = 1.e4; # Nm^2
